--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "classnames": "^2.1.3",
+    "exports-loader": "^0.6.2",
+    "imports-loader": "^0.6.5",
     "lodash": "^3.10.1",
     "material-ui": "^0.14.0",
     "object-assign": "^4.0.1",
@@ -38,9 +40,10 @@
     "rc-select": "^5.8.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-schema-form": "^0.2.0",
+    "react-schema-form": "^0.2.1",
     "react-tap-event-plugin": "^0.2.1",
-    "tv4": "^1.2.7"
+    "tv4": "^1.2.7",
+    "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {
     "babel": "^5.8.21",
@@ -56,7 +59,6 @@
     "eslint-plugin-react": "^3.2.2",
     "flux": "^2.0.3",
     "jest-cli": "^0.5.0",
-    "jquery": "^2.1.4",
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
     "react-ace": "git+https://github.com/networknt/react-ace.git",
@@ -70,7 +72,7 @@
     "lint": "eslint src",
     "preversion": "webpack -p && git add dist",
     "prepublish": "rimraf lib && babel src -d lib",
-    "start": "webpack-dev-server -d --config example/webpack.config.js",
+    "start": "webpack-dev-server -d --port 8001 --config example/webpack.config.js",
     "test": "npm run lint && jest"
   },
   "jest": {
