--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-schema-form-rc-select",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "React json schema form RcSelect Extension",
   "keywords": [
     "json schema",
@@ -31,8 +31,7 @@
   },
   "dependencies": {
     "classnames": "^2.1.3",
-    "exports-loader": "^0.6.2",
-    "imports-loader": "^0.6.5",
+    "jquery": "^2.2.0",
     "lodash": "^3.10.1",
     "material-ui": "^0.14.0",
     "object-assign": "^4.0.1",
@@ -42,8 +41,7 @@
     "react-dom": "^0.14.3",
     "react-schema-form": "^0.2.1",
     "react-tap-event-plugin": "^0.2.1",
-    "tv4": "^1.2.7",
-    "whatwg-fetch": "^0.10.1"
+    "tv4": "^1.2.7"
   },
   "devDependencies": {
     "babel": "^5.8.21",
