--- a/package.json
+++ b/package.json
@@ -26,45 +26,45 @@
     "type": "git",
     "url": "https://github.com/networknt/react-schema-form-rc-select.git"
   },
-  "babel": {
-    "stage": 0
-  },
   "dependencies": {
-    "classnames": "^2.1.3",
-    "jquery": "^2.2.0",
-    "lodash": "^3.10.1",
-    "material-ui": "^0.14.0",
-    "object-assign": "^4.0.1",
+    "classnames": "^2.2.5",
+    "jquery": "^3.1.1",
+    "lodash": "^4.16.6",
+    "material-ui": "^0.16.1",
+    "object-assign": "^4.1.0",
     "objectpath": "^1.2.1",
-    "rc-select": "^5.8.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-schema-form": "^0.2.2",
-    "react-tap-event-plugin": "^0.2.1",
+    "rc-select": "^6.6.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-schema-form": "^0.2.10",
+    "react-tap-event-plugin": "^1.0.0",
     "tv4": "^1.2.7"
   },
   "devDependencies": {
-    "babel": "^5.8.21",
-    "babel-eslint": "^4.0.8",
-    "babel-jest": "^5.3.0",
-    "babel-loader": "^5.3.1",
-    "babel-runtime": "^6.1.18",
-    "brace": "git+https://github.com/networknt/brace.git",
-    "chai": "^3.2.0",
-    "css-loader": "^0.18.0",
-    "d3": "^3.5.6",
-    "eslint": "^1.9.0",
-    "eslint-plugin-react": "^3.2.2",
-    "flux": "^2.0.3",
-    "jest-cli": "^0.5.0",
-    "less": "^2.5.3",
-    "less-loader": "^2.2.2",
-    "react-ace": "git+https://github.com/networknt/react-ace.git",
-    "react-select": "^0.6.7",
-    "rimraf": "^2.4.2",
-    "style-loader": "^0.12.4",
-    "webpack": "^1.12.11",
-    "webpack-dev-server": "^1.10.1"
+    "babel-core": "^6.5.2",
+    "babel-eslint": "^7.1.0",
+    "babel-jest": "^16.0.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-runtime": "^6.18.0",
+    "brace": "0.9.0",
+    "chai": "^3.5.0",
+    "css-loader": "^0.25.0",
+    "d3": "^4.3.0",
+    "eslint": "^3.9.1",
+    "eslint-plugin-react": "^6.5.0",
+    "flux": "^3.1.0",
+    "jest-cli": "^16.0.2",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "react-ace": "4.0.0",
+    "react-select": "^1.0.0-rc.2",
+    "rimraf": "^2.5.4",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
   "scripts": {
     "lint": "eslint src",
