--- a/.eslintrc
+++ b/.eslintrc
@@ -1,47 +1,36 @@
 {
-  // I want to use babel-eslint for parsing!
+  "extends": [
+      "airbnb",
+      "plugin:react/recommended",
+      "plugin:flowtype/recommended",
+      "plugin:prettier/recommended",
+      "prettier/flowtype",
+      "prettier/react",
+      "prettier/standard"
+  ],
   "parser": "babel-eslint",
-
   "env": {
     "browser": true,
     "node": true,
-    "jasmine": true
+    "jest": true,
+    "es6": true
   },
-
-  // To give you an idea how to override rule options:
   "rules": {
-    "quotes": [2, "single"],
-    "strict": [2, "never"],
-    "eol-last": [0],
-    "no-mixed-requires": [0],
-    "no-underscore-dangle": [0],
-    "no-use-before-define": [2, "nofunc"],
-
-    "no-alert": 0,
-
-    // react
-    "react/display-name": 0,
-    "react/jsx-boolean-value": 1,
-    "react/jsx-no-undef": 1,
-    "react/jsx-sort-props": 0,
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
-    "react/no-did-mount-set-state": 1,
-    "react/no-did-update-set-state": 1,
-    "react/no-multi-comp": 0,
-    "react/no-unknown-property": 1,
-    "react/prop-types": 0,
-    "react/react-in-jsx-scope": 1,
-    "react/self-closing-comp": 1,
-    "react/jsx-wrap-multilines": 1
+    "react/jsx-props-no-spreading": "off",
+    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }]
   },
-
-  "ecmaFeatures": {
-    "jsx": true,
-    "modules": true
+  "settings": {
+    "react": {
+       "version":"16.12"
+    }
   },
-
   "plugins": [
-    "react"
+    "flowtype",
+    "flowtype-errors",
+    "react",
+    "import",
+    "prettier"
   ]
 }
