--- a/package.json
+++ b/package.json
@@ -15,76 +15,91 @@
   "author": "Steve Hu",
   "license": "MIT",
   "main": "./lib/index",
+  "engines": {
+    "npm": "^6.4.1"
+  },
   "files": [
     "README.md",
     "CHANGELOG.md",
     "LICENSE",
     "css",
-    "lib"
+    "lib",
+    "dist"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/networknt/react-schema-form-rc-select.git"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "lodash": "^4.16.6",
-    "objectpath": "^1.2.1",
-    "material-ui": ">=0.16.1",
-    "react": "^15.3.2",
-    "react-schema-form": "^0.3.4",
-    "rc-select": "^6.6.1",
-    "tv4": "^1.2.7"
+    "classnames": "^2.2.6",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
+    "objectpath": "^1.2.2",
+    "rc-select": "^9.2.1",
+    "react-schema-form": "^0.8.0",
+    "tv4": "^1.3.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.5.2",
-    "babel-eslint": "^7.1.0",
-    "babel-jest": "^16.0.0",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-runtime": "^6.18.0",
-    "brace": "0.9.0",
-    "chai": "^3.5.0",
-    "css-loader": "^0.25.0",
-    "d3": "^4.3.0",
-    "eslint": "^3.9.1",
-    "eslint-plugin-react": "^6.5.0",
-    "flux": "^3.1.0",
-    "jest-cli": "^16.0.2",
-    "jquery": "^3.1.1",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "react": "^15.3.2",
-    "react-ace": "4.0.0",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-select": "^1.0.0-rc.5",
-    "react-tap-event-plugin": "^2.0.0",
-    "rimraf": "^2.5.4",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-syntax-export-default-from": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-flow": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-runtime": "6.26.0",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.15.1",
+    "eslint": "6.7.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "6.7.0",
+    "eslint-plugin-flowtype": "^4.5.2",
+    "eslint-plugin-flowtype-errors": "4.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "flow-bin": "0.112.0",
+    "jest-cli": "^24.9.0",
+    "jsdom": "15.2.1",
+    "jsdom-global": "3.0.2",
+    "prettier": "1.19.1",
+    "react": "^16.8",
+    "react-dom": "^16.8",
+    "react-hot-loader": "4.12.18",
+    "react-test-renderer": "16.12.0",
+    "rimraf": "^3.0.0",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.10",
+    "webpack-config": "^7.5.0"
   },
   "peerDependencies": {
+    "@material-ui/core": ">=4.7.0",
+    "@material-ui/icons": ">=4.5.1",
+    "react": "*",
+    "react-dom": "*"
   },
   "scripts": {
+    "preversion": "webpack -p",
+    "prepublish": "rimraf lib && NODE_ENV=production babel src -d lib",
     "lint": "eslint src",
-    "preversion": "webpack -p && git add dist",
-    "prepublish": "rimraf lib && babel src -d lib",
-    "start": "webpack-dev-server -d --port 8001 --config example/webpack.config.js",
     "test": "npm run lint && jest"
   },
   "jest": {
-    "testPathDirs": [
+    "verbose": true,
+    "testURL": "http://localhost/",
+    "roots": [
       "src"
     ],
-    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
-    "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react"
-    ]
+    "testEnvironment": "node"
   }
 }
