--- a/example/package.json
+++ b/example/package.json
@@ -1,61 +1,37 @@
 {
-  "name": "react-schema-form--rc-select-example",
+  "name": "demo",
   "version": "0.1.0",
-  "description": "React json schema form rc-select example",
-  "keywords": [
-    "json schema",
-    "schema form",
-    "react",
-    "react-component",
-    "form"
-  ],
-  "author": "Steve Hu, Nicholas Azar",
-  "license": "MIT",
-  "main": "./lib/index",
-  "engines": {
-    "yarn": "^1.9.4"
-  },
-  "files": [
-    "README.md",
-    "CHANGELOG.md",
-    "LICENSE",
-    "css",
-    "lib"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/networknt/react-schema-form-rc-select.git"
-  },
+  "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@material-ui/core": "4.7.0",
-    "@material-ui/icons": "4.5.1",
-    "babel-eslint": "10.0.3",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "6.7.1",
-    "install": "^0.13.0",
-    "lodash": "^4.17.15",
-    "react": "16.12.0",
-    "react-ace": "8.0.0",
-    "react-dom": "16.12.0",
-    "react-schema-form": "0.8.0",
-    "react-schema-form-rc-select": "file:../",
-    "supports-color": "^7.1.0",
-    "webpack-cli": "3.3.10"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
-    "@babel/runtime": "7.7.4",
-    "@webpack-cli/migrate": "0.1.9",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.6",
-    "babel-preset-env": "1.7.0",
+    "@material-ui/core": "^4.7.0",
+    "@material-ui/icons": "^4.5.1",
     "file-loader": "^5.0.2",
-    "webpack": "4.41.2",
-    "webpack-dev-server": "3.9.0"
+    "react": "^16.12.0",
+    "react-ace": "^8.0.0",
+    "react-dom": "^16.12.0",
+    "react-schema-form": "^0.8.0",
+    "react-schema-form-rc-select": "file:../",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "webpack-dev-server -d --config webpack.config.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
