--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
     "react-ace": "^8.0.0",
     "react-dom": "^16.12.0",
     "react-schema-form": "^0.8.4",
-    "react-schema-form-rc-select": "^0.3.2",
+    "react-schema-form-rc-select": "file:../",
     "react-scripts": "3.2.0"
   },
   "scripts": {
