fixes #31 upgrade the project structure with create-react-library

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,9 @@
-# EditorConfig: http://EditorConfig.org
-# all files defaults
-[**]
-# Unix-style newlines with a newline ending
-end_of_line = lf
-insert_final_newline = true
-# Set default charset
-charset = utf-8
-# 2 space indentation
-indent_style = space
-indent_size = 4
-# trim whitespaces
-trim_trailing_whitespace = true
-# always insert final newline
-insert_final_newline = true
+root = true
 
-# 2 spaces indent for config files
-[{package.json}]
+[*]
+charset = utf-8
 indent_style = space
 indent_size = 2
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
