--- a/example/package.json
+++ b/example/package.json
@@ -1,43 +1,37 @@
 {
-  "name": "demo",
+  "name": "react-schema-form-rc-select-example",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.7.0",
-    "@material-ui/icons": "^4.5.1",
-    "file-loader": "^5.0.2",
-    "react": "^16.12.0",
-    "react-ace": "^8.0.0",
-    "react-dom": "^16.12.0",
-    "react-schema-form": "^0.8.4",
-    "react-schema-form-rc-select": "file:../",
-    "react-scripts": "3.2.0"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "start": "node ../node_modules/react-scripts/bin/react-scripts.js start",
+    "build": "node ../node_modules/react-scripts/bin/react-scripts.js build",
+    "test": "node ../node_modules/react-scripts/bin/react-scripts.js test",
+    "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "ace-builds": "^1.4.12",
+    "file-loader": "^6.1.0",
+    "lodash": "^4.17.20",
+    "react": "link:../node_modules/react",
+    "react-ace": "^9.1.3",
+    "react-dom": "link:../node_modules/react-dom",
+    "react-scripts": "link:../node_modules/react-scripts",
+    "react-schema-form": "link:../node_modules/react-schema-form",
+    "react-schema-form-rc-select": "link:.."
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "gh-pages": "^2.1.1"
-  },
-  "homepage": "http://networknt.github.io/react-schema-form-rc-select"
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
