--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-schema-form-rc-select",
-  "version": "0.3.15",
+  "version": "0.3.16",
   "description": "React json schema form RcSelect Extension",
   "keywords": [
     "json schema",
@@ -45,9 +45,10 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
+    "object-path": "^0.11.4",
     "objectpath": "^1.2.2",
     "rc-select": "^9.2.1",
-    "react-schema-form": "^0.9.2",
+    "react-schema-form": "^0.9.7",
     "tv4": "^1.3.0"
   },
   "devDependencies": {
