--- a/example/package.json
+++ b/example/package.json
@@ -10,14 +10,18 @@
     "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "ace-builds": "^1.4.12",
-    "file-loader": "^6.1.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "ace-builds": "^1.4.13",
+    "file-loader": "^6.2.0",
     "lodash": "^4.17.21",
     "react": "link:../node_modules/react",
-    "react-ace": "^9.1.3",
+    "react-ace": "^9.5.0",
     "react-dom": "link:../node_modules/react-dom",
+    "react-mde": "^11.5.0",
+    "react-select": "^5.2.1",
+    "showdown": "^1.9.1",
+    "supports-color": "^9.2.1",
     "react-scripts": "link:../node_modules/react-scripts",
     "react-schema-form": "link:../node_modules/react-schema-form",
     "react-schema-form-rc-select": "link:.."
