--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
-  "type": "module",
   "engines": {
     "node": ">=14"
   },
@@ -51,10 +50,9 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "lodash": "^4.17.15",
-    "object-path": "^0.11.5",
-    "objectpath": "^2.0.0",
+    "object-path": "^0.11.8",
     "rc-select": "^9.2.1",
-    "react-schema-form": "^1.0.1",
+    "react-schema-form": "^1.0.2",
     "tv4": "^1.3.0",
     "universal-cookie": "^4.0.4"
   },
@@ -65,7 +63,7 @@
     "@mui/material": "^5.1.0",
     "@mui/styles": "^5.1.0",
     "@mui/x-data-grid": "^5.0.1",
-    "babel-eslint": "^10.0.3",
+    "@babel/eslint-parser": "^7.16.5",
     "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -85,7 +83,7 @@
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^5.0.0"
   },
   "files": [
     "dist"
