--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,7 @@
     "@uiw/react-codemirror": "^4.23.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-schema-form": "../../react-schema-form",
     "react-schema-form-rc-select": "../../react-schema-form-rc-select"
   },
   "devDependencies": {
