--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-schema-form": "^1.0.5",
+    "react-select": "^5.8.2",
     "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
